<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6600"
    tools:context=".MainActivity">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/consumoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textconsumo" />

        <EditText
            android:id="@+id/consumoTotal_Id"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textcouvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/couvertartistico" />

        <EditText
            android:id="@+id/couvert_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textdivisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/dividir" />

        <EditText
            android:id="@+id/divisao_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="#F4A460"
            android:text="@string/calcular" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/texttaxa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/taxa" />

        <EditText
            android:id="@+id/taxaServico_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textconta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/contatotal" />

        <EditText
            android:id="@+id/contaTotal_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="338dp"
        android:layout_height="137dp">

        <TextView
            android:id="@+id/edt_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/valorpessoa" />

        <EditText
            android:id="@+id/valorPessoa_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/balaio"
            android:layout_span="2"/>
    </TableRow>


</TableLayout>